kubernetes/apps/networking/envoy-gateway/app/internal/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.kubernetes.io/target: &hostname internal.ok8.sh
    gatus.home-operations.com/endpoint: |-
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy-internal
  addresses:
    - type: IPAddress
      value: &address 10.0.20.10
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: *address
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ok8-sh-tls
          - kind: Secret
            name: salmon-cafe-tls
